# mkgmap-github-action

./: .gitignore  mkgmap_github_action.py  mkgmaps_github_action.py  pyproject.toml  regions.json
.github/workflows/: publish.yml
