[tool.poetry]
name = "mkgmaps-github-action"
version = "0.3.0"
description = ""
authors = ["Dick Marinus <dick@mrns.nl>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
Jinja2 = "^3.1.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mkgmaps-github-action = 'mkgmaps_github_action:main'
